# monero-gui

./: .gitmodules  CMakeLists.txt  main.qml  qml.qrc
components/: QRCodeScanner.qml  UrCode.qml  UrCodeScanner.qml
pages/: Transfer.qml
pages/settings/: SettingsLayout.qml
src/: CMakeLists.txt
src/libwalletqt/: PendingTransaction.cpp  PendingTransaction.h  UnsignedTransaction.cpp  UnsignedTransaction.h  Wallet.cpp  Wallet.h
src/main/: main.cpp
src/otsur/qtquick/: CMakeLists.txt
src/ur/: CMakeLists.txt
src/ur/bcur/: CMakeLists.txt
src/ur/display/: CMakeLists.txt  UrSettingsDialog.cpp  UrSettingsDialog.ui
src/ur/qrcode/: CMakeLists.txt
src/ur/qrencode/: CMakeLists.txt
src/ur/qtquick/: CMakeLists.txt  UrRegister.cpp
src/ur/scan/: CMakeLists.txt  QrScanThread.cpp  QrScanThread.h  ScanWidget.cpp  ScanWidget.h  ScanWidget.ui
wizard/: WizardHome.qml  WizardRestoreWallet1.qml
